fixed overflow on safari

--- a/public/stylesheets/user-content.css
+++ b/public/stylesheets/user-content.css
@@ -1,3 +1,4 @@
+html,
 body {
   height: 100%;
   background-color: #d7e7f5;
